Bug 423823. Clip overflowing background when tbody is scrollable. r=fantasai,sr=dbaron